font size adjustment

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 
 html {
   font-size: 1rem;
-  font-size: clamp(1vw, 0.9rem + 0.25vw, 3vw);
+  font-size: clamp(0.7vw, 0.9rem + 0.25vw, 0.9vw);
 }
 
 body {
@@ -130,7 +130,13 @@ header.spacer {
   line-height: 180%;
 }
 
+p b {
+  font-weight: bold;
+  color: var(--main-white);
+}
+
 a.card__trigger > span {
+  margin-top: 2%;
   color: var(--main-white);
   font-weight: bold;
   display: inline-block;
